# learn-opengl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
public/: main
scripts/: build.sh  run.sh
src/: main.cpp
